<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="22dp"
        android:text="@string/uwu_first_fragment"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumero2"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumero2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="52dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_calcular"
        app:layout_constraintTop_toBottomOf="@+id/editTextResultado" />

    <EditText
        android:id="@+id/editTextNumero1"
        android:layout_width="131dp"
        android:layout_height="60dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:hint="@string/number_1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumero2"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumero2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextNumero2" />

    <EditText
        android:id="@+id/editTextNumero2"
        android:layout_width="146dp"
        android:layout_height="57dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/number_2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupOperaciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextNumero1"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="95dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextResultado" />

    <EditText
        android:id="@+id/editTextResultado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupOperaciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumero2">

        <RadioButton
            android:id="@+id/radioButtonSuma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sumar" />

        <RadioButton
            android:id="@+id/radioButtonResta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restar" />

        <RadioButton
            android:id="@+id/radioButtonMultiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplicar" />

        <RadioButton
            android:id="@+id/radioButtonDividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dividir" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>